# AI-Correction-System

./: .TODO.kate-swp  .bandit  .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI_USAGE.md  LICENSE  Makefile  README.md  docker-compose.yml  log  pyproject.toml  requirements.txt  test_conversation_grading.py  test_gemini_provider.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md
docs/: API.md  ARCHITECTURE.md  AUDIT_STRUCTURE.md  CONFIGURATION.md  DEVELOPER.md  annotation.md  dual_llm_architecture.md
nginx/: Dockerfile  nginx.conf
scripts/: bandit-report.json  security-scan.sh
src/: main.py
src/ai/: __init__.py  base_provider.py  batch_grader.py  comparison_provider.py  disagreement_analyzer.py  gemini_provider.py  openai_provider.py  provider_factory.py  response_parser.py  single_pass_grader.py
src/analysis/: __init__.py  clustering.py  cross_copy.py  detection.py  detection_prompts.py  detection_translations.py  pre_analysis.py  pre_analysis_prompts.py  pre_analysis_translations.py
src/api/: __init__.py  app.py  auth.py  health.py  middleware.py  rate_limiter.py  schemas.py  subscription.py  websocket.py
src/audit/: __init__.py  builder.py
src/billing/: __init__.py  stripe_client.py  webhook_handler.py
src/calibration/: __init__.py  (+2 more)
tests/: legacy_test_gemini_provider.py  test_annotation_pdf.py  test_api_auth_sessions.py  test_calibration.py  test_detection_normalization.py  test_models.py  test_retroactive.py
web/: README.md  package-lock.json  package.json
(+146 files in other folders)
