[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-correction"
version = "0.1.0"
description = "Intelligent AI correction system for student grading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "pymupdf>=1.23.26",
    "pdfplumber>=0.11.0",
    "pillow>=11.0.0",
    "openai>=1.51.0",
    "google.genai>=0.8.6",
    "scikit-learn>=1.6.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.40.0",
    "tenacity>=9.1.4",
    "loguru>=0.7.3",
    "rich>=14.1.0",
    "python-dotenv>=1.2.1",
    "openpyxl>=3.1.0,<4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
